# pks

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  Техническое_Задание_Симулятор_лифтов.docx
KR1/: hello.cpp  hello.h  main.cpp
KR2-4/KR3/: CMakeLists.txt  README.md
KR2-4/KR3/include/: dispatcher.h  elevator.h  i_dispatch_strategy.h  i_request_completion_listener.h  min_queue_strategy.h  nearest_elevator_strategy.h  request.h  simulation.h  statistics.h  strategy_factory.h  thread_safe_queue.h
KR2-4/KR3/src/: dispatcher.cpp  elevator.cpp  main.cpp  min_queue_strategy.cpp  nearest_elevator_strategy.cpp  simulation.cpp  statistics.cpp  strategy_factory.cpp
include/: dispatcher.h  elevator.h  i_dispatch_strategy.h  i_request_completion_listener.h  min_queue_strategy.h  nearest_elevator_strategy.h  request.h  simple_queue.h  simulation.h  statistics.h  strategy_factory.h
src/: dispatcher.cpp  elevator.cpp  main.cpp  min_queue_strategy.cpp  nearest_elevator_strategy.cpp  simulation.cpp  statistics.cpp  strategy_factory.cpp
tests/: support.h  test_dispatcher.cpp  test_elevator.cpp  test_min_queue_strategy.cpp  test_nearest_strategy.cpp  test_request.cpp  test_simple_queue.cpp  test_statistics.cpp  test_strategy_factory.cpp
tests/scenarios/: scenario_full_simulation.cpp  scenario_min_queue_balance.cpp  scenario_nearest_dispatch.cpp  scenario_single_elevator.cpp
